--- a/ardunio/libtest/makefile
+++ b/ardunio/libtest/makefile
@@ -123,10 +123,10 @@ core: $(ARDUINO_CORE_OBJS) $(ARDUINO_CORE_C_OBJS)
 project: $(PROJECT_OBJS)
 
 $(ARDUINO_CORE_OBJS): %.o: 
-	$(CPP) -c $(CPP_FLAGS) $(ARDUINO_CORE_PATH)/$*.cpp -o $(BUILD_DIR)/$*.o
+	$(CPP) $(CPP_FLAGS) -c $(ARDUINO_CORE_PATH)/$*.cpp -o $(BUILD_DIR)/$*.o
 
 $(ARDUINO_CORE_C_OBJS): %.o:
-	$(CC) -c $(C_FLAGS) $(ARDUINO_CORE_PATH)/$*.c -o $(BUILD_DIR)/$*.o
+	$(CC) $(C_FLAGS) -c $(ARDUINO_CORE_PATH)/$*.c -o $(BUILD_DIR)/$*.o
 
 $(SPI_OBJS): %.o:
 	$(CPP) $(SPI_LIBRARY_PATH)/$*.cpp -c $(CPP_FLAGS) -o $(BUILD_DIR)/$*.o
@@ -137,4 +137,4 @@ $(ETHERNET_UTIL_OBJS): %.o:
 	$(CPP) $(ETHERNET_UTIL_LIBRARY_PATH)/$*.cpp -c $(CPP_FLAGS) -o $(BUILD_DIR)/$*.o
 
 $(PROJECT_OBJS): %.o:
-	$(CPP) -c $(CPP_FLAGS) $(PROJECT_PATH)/$*.cpp -o $(BUILD_DIR)/$*.o
+	$(CPP) $(CPP_FLAGS) -c $(PROJECT_PATH)/$*.cpp -o $(BUILD_DIR)/$*.o
