--- a/software/collector_board/makefile
+++ b/software/collector_board/makefile
@@ -29,7 +29,7 @@ FORMAT = ihex
 
 # Project files
 PROJECT_PATH = .
-PROJECT_OBJS = main.o usart.o ethernet_twi.o zac.o interpret.o checksum.o
+PROJECT_OBJS = main.o usart.o ethernet_twi.o zac.o interpret.o checksum.o config.o
 #----------------------------------------------------------
 # Programmer settings
 AVRDUDE_PROGRAMMER = usbasp
@@ -96,7 +96,7 @@ size:
 	$(SIZE) $(TARGET).elf
 
 elf: $(TARGET).elf
-hex: $(TARGET).hex
+hex: $(TARGET).hex $(TARGET)_eeprom.hex
 
 # link everything together:
 $(TARGET).elf: project
@@ -107,6 +107,10 @@ $(TARGET).elf: project
 # as we do not want to write this to flash
 $(TARGET).hex: $(TARGET).elf
 	$(OBJCOPY) -O $(FORMAT) -R .eeprom $< $@
+
+# generate eeprom hexfile:
+$(TARGET)_eeprom.hex: $(TARGET).elf
+	$(OBJCOPY) -O $(FORMAT) -j .eeprom $< $@
 
 clean:
 	rm -rv $(BUILD_DIR)/*
