--- a/software/ethernet_board/makefile
+++ b/software/ethernet_board/makefile
@@ -21,8 +21,8 @@ FORMAT = ihex
 
 # Project files
 PROJECT_PATH = .
-PROJECT_C_OBJS = usart.o collector_twi.o response.o
-PROJECT_CPP_OBJS = main.o configuration.o
+PROJECT_C_OBJS = usart.o collector_twi.o
+PROJECT_CPP_OBJS = main.o configuration.o response.o
 #----------------------------------------------------------
 # Programmer settings
 AVRDUDE_PROGRAMMER = stk500v1
