finish with sock stream

--- a/software/ethernet_board/makefile
+++ b/software/ethernet_board/makefile
@@ -22,7 +22,7 @@ FORMAT = ihex
 # Project files
 PROJECT_PATH = .
 PROJECT_C_OBJS = usart.o collector_twi.o
-PROJECT_CPP_OBJS = main.o configuration.o response.o
+PROJECT_CPP_OBJS = main.o configuration.o sock_stream.o
 #----------------------------------------------------------
 # Programmer settings
 AVRDUDE_PROGRAMMER = stk500v1
