--- a/software/ethernet_board/makefile
+++ b/software/ethernet_board/makefile
@@ -21,8 +21,8 @@ FORMAT = ihex
 
 # Project files
 PROJECT_PATH = .
-PROJECT_C_OBJS = usart.o collector_twi.o eeprom_storage.o
-PROJECT_CPP_OBJS = main.o configuration.o sock_stream.o user_cmd.o
+PROJECT_C_OBJS = usart.o collector_twi.o config.o
+PROJECT_CPP_OBJS = main.o networking.o sock_stream.o user_cmd.o
 
 PROJECT_UTIL_PATH = ../util
 PROJECT_UTIL_C_OBJS = checksum.o
