adjusted makefiles for eeprom and fuses

--- a/software/ethernet_board/makefile
+++ b/software/ethernet_board/makefile
@@ -32,6 +32,7 @@ PROJECT_UTIL_C_OBJS = checksum.o
 AVRDUDE_PROGRAMMER = stk500v1
 AVRDUDE_PORT = /dev/ttyACM0
 AVRDUDE_WRITE_FLASH = -U flash:w:$(TARGET).hex
+AVRDUDE_WRITE_EEPROM = -U eeprom:w:$(TARGET)_eeprom.hex
 AVRDUDE_FLAGS = -p $(MCU) -P $(AVRDUDE_PORT) -c $(AVRDUDE_PROGRAMMER)
 # -F forces programming without checking device
 #  identifier.
@@ -118,13 +119,14 @@ build: elf hex
 # upload the program to the microcontroller flash:
 upload:
 	$(AVRDUDE) $(AVRDUDE_FLAGS) $(AVRDUDE_WRITE_FLASH)
-
+eeprom:
+	$(AVRDUDE) $(AVRDUDE_FLAGS) $(AVRDUDE_WRITE_EEPROM)
 # analyze compiled program size:
 size:
 	$(SIZE) $(TARGET).elf
 
 elf: $(TARGET).elf
-hex: $(TARGET).hex
+hex: $(TARGET).hex $(TARGET)_eeprom.hex
 
 # link everything together:
 $(TARGET).elf: core ethernet spi project
@@ -135,6 +137,10 @@ $(TARGET).elf: core ethernet spi project
 # as we do not want to write this to flash
 $(TARGET).hex: $(TARGET).elf
 	$(OBJCOPY) -O $(FORMAT) -R .eeprom $< $@
+
+# generate eeprom hexfile:
+$(TARGET)_eeprom.hex: $(TARGET).elf
+	$(OBJCOPY) -O $(FORMAT) -j .eeprom --no-change-warnings --change-section-lma .eeprom=0 $< $@
 
 clean:
 	rm -rv $(BUILD_DIR)/*
