--- a/software/ethernet_board/makefile
+++ b/software/ethernet_board/makefile
@@ -29,18 +29,22 @@ PROJECT_UTIL_C_OBJS = checksum.o
 
 #----------------------------------------------------------
 # Programmer settings
-AVRDUDE_PROGRAMMER = stk500v1
-AVRDUDE_PORT = /dev/ttyACM0
-AVRDUDE_WRITE_FLASH = -U flash:w:$(TARGET).hex
-AVRDUDE_WRITE_EEPROM = -U eeprom:w:$(TARGET)_eeprom.hex
-AVRDUDE_FLAGS = -p $(MCU) -P $(AVRDUDE_PORT) -c $(AVRDUDE_PROGRAMMER)
 # -F forces programming without checking device
 #  identifier.
 #  This is, because the arduino bootloader does
 #  not conform to the stk500v1 standard when sending
 #  the device identifier. Hence the device ID check
 #  always will fail.
-AVRDUDE_FLAGS += -F
+#AVRDUDE_FLAGS += -F
+AVRDUDE_PROGRAMMER = usbasp
+#AVRDUDE_PROGRAMMER = stk500v1 -F
+# enable burn out detection 4.5V, preserve eeprom on chip erase:
+FUSE_HIGH = 0b11010011:m
+AVRDUDE_PORT = /dev/ttyACM0
+AVRDUDE_WRITE_FLASH = -U flash:w:$(TARGET).hex
+AVRDUDE_WRITE_EEPROM = -U eeprom:w:$(TARGET)_eeprom.hex
+AVRDUDE_WRITE_FUSES = -U hfuse:w:$(FUSE_HIGH)
+AVRDUDE_FLAGS = -p $(MCU) -P $(AVRDUDE_PORT) -c $(AVRDUDE_PROGRAMMER)
 #----------------------------------------------------------
 # compiler suite
 CC=avr-gcc
@@ -121,6 +125,8 @@ upload:
 	$(AVRDUDE) $(AVRDUDE_FLAGS) $(AVRDUDE_WRITE_FLASH)
 eeprom:
 	$(AVRDUDE) $(AVRDUDE_FLAGS) $(AVRDUDE_WRITE_EEPROM)
+fuse:
+	$(AVRDUDE) $(AVRDUDE_FLAGS) $(AVRDUDE_WRITE_FUSES)
 # analyze compiled program size:
 size:
 	$(SIZE) $(TARGET).elf
