makefiles modified to create build foler automatically

--- a/software/ethernet_board/makefile
+++ b/software/ethernet_board/makefile
@@ -117,7 +117,11 @@ PROJECT_CPP_OBJS_FIN=$(addprefix $(BUILD_DIR)/,$(PROJECT_CPP_OBJS))
 
 #--------------------------------------------------------------
 # rules:
-all: build size
+all: directory build size
+
+directory:
+	mkdir -p build
+
 build: elf hex
 
 # upload the program to the microcontroller flash:
@@ -149,7 +153,7 @@ $(TARGET)_eeprom.hex: $(TARGET).elf
 	$(OBJCOPY) -O $(FORMAT) -j .eeprom --no-change-warnings --change-section-lma .eeprom=0 $< $@
 
 clean:
-	rm -rv $(BUILD_DIR)/*
+	rm -rv $(BUILD_DIR)
 
 ethernet: $(ETHERNET_OBJS_FIN) $(ETHERNET_UTIL_OBJS_FIN)
 
